[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Screens/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://GFX/Tela_Inicial/tela_inicio.png" type="Texture" id=2]
[ext_resource path="res://GFX/Font/RPGSystem.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://SFX/som_de_botao.ogg" type="AudioStream" id=4]
[ext_resource path="res://Scenes/Logo/Logo.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "change_scene"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.36035
margin_right = 1.36035
texture = ExtResource( 2 )

[node name="VBoxContainer" type="HBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -355.0
margin_top = 600.0
margin_right = 331.0
margin_bottom = -74.0
custom_constants/separation = 100
alignment = 1

[node name="ButtonStart" type="Button" parent="ColorRect/VBoxContainer"]
margin_left = 106.0
margin_right = 194.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "Start"
flat = true

[node name="AudioButtonStart" type="AudioStreamPlayer" parent="ColorRect/VBoxContainer/ButtonStart"]
stream = ExtResource( 4 )

[node name="ButtonCredits" type="Button" parent="ColorRect/VBoxContainer"]
margin_left = 294.0
margin_right = 413.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "Credits"
flat = true

[node name="AudioButtonCredis" type="AudioStreamPlayer" parent="ColorRect/VBoxContainer/ButtonCredits"]
stream = ExtResource( 4 )

[node name="ButtonExit" type="Button" parent="ColorRect/VBoxContainer"]
margin_left = 513.0
margin_right = 580.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "Exit"
flat = true

[node name="AudioButtonExit" type="AudioStreamPlayer" parent="ColorRect/VBoxContainer/ButtonExit"]
stream = ExtResource( 4 )

[node name="HBoxContainer" parent="ColorRect" instance=ExtResource( 5 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/change_scene = SubResource( 2 )

[connection signal="pressed" from="ColorRect/VBoxContainer/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="finished" from="ColorRect/VBoxContainer/ButtonStart/AudioButtonStart" to="." method="_on_AudioButtonStart_finished"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ButtonCredits" to="." method="_on_ButtonCredits_pressed"]
[connection signal="finished" from="ColorRect/VBoxContainer/ButtonCredits/AudioButtonCredis" to="." method="_on_AudioButtonCredis_finished"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ButtonExit" to="." method="_on_ButtonExit_pressed"]
[connection signal="finished" from="ColorRect/VBoxContainer/ButtonExit/AudioButtonExit" to="." method="_on_AudioButtonExit_finished"]
